# PortML

./: README.md  docker-compose.yml
ml-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
ml-service/app/: main.py
ml-service/app/api/v1/: endpoints.py
ml-service/app/core/: config.py  logging.py  paths.py
ml-service/app/models/: schemas.py
ml-service/app/services/: __init__.py  baseline.py  boosting.py  planner.py  rl.py
ml-service/app/tests/: test_feedback_train.py  test_plan_endpoint.py
ml-service/app/training/: trainer.py
portmanager-backend/: Dockerfile  pom.xml
portmanager-backend/src/main/java/com/portmanager/: PortManagerApplication.java
portmanager-backend/src/main/java/com/portmanager/client/: MlServiceClient.java
portmanager-backend/src/main/java/com/portmanager/config/: JacksonConfig.java  ModelMapperConfig.java  PlanningAlgorithmConverter.java  RestTemplateConfig.java
portmanager-backend/src/main/java/com/portmanager/dto/: AssignmentDto.java  ConditionsDto.java  EventDto.java  EventType.java  GenerationConfigDto.java  MetricsDto.java  PairwiseFeedbackDto.java  PairwiseRequestDto.java  (+10 more)
portmanager-backend/src/main/resources/: application.yml
portmanager-backend/src/main/resources/db/migration/: V1__init.sql
portmanager-backend/src/test/java/com/portmanager/: IntegrationFlowTest.java
portmanager-ui/: Dockerfile  pom.xml
portmanager-ui/src/main/resources/: application.css  config.properties  events_settings.fxml  generation_settings.fxml  schedule_view.fxml  terminal_settings.fxml  ui.fxml  vessels_settings.fxml
(+61 files in other folders)
